hw7/apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          imagePullPolicy: Always
          image: nik1202/order-service:v2
          ports:
            - name: web
              containerPort: 8000
