hw7/apps/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: apps
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
